Simplify update checker (closes #119)